리액트 전환 2번째, scss수정

--- a/src/Pages/Kimjeongho/Main/Components/Nav/Nav.scss
+++ b/src/Pages/Kimjeongho/Main/Components/Nav/Nav.scss
@@ -1,9 +1,8 @@
 body nav {
     border-bottom: 1px solid white;
-    padding: 30px;
+    padding: 15px;
     display: flex;
     justify-content: center;
-    /*position: fixed;*/
     width: 100%;
     background-color: white;
 }
@@ -16,21 +15,20 @@ nav {
     margin-right: 5px;
     padding-right: 15px;
     padding-left: 15px;
-    width: 3%;
+    width: 2%;
 }
 
 .iconBands{
     display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
 .smallIcons {
     margin-right: 5px;
-    padding-right: 15px;
-    padding-left: 15px;
-    width: 50%;
-    /*display: flex;
-    justify-content: space-between;*/
+    padding-right: 10%;
+    padding-left: 5px;
+    width: 30px;
 }
 
 div {
@@ -38,11 +36,10 @@ div {
 }
 
 #instagram {
-    width: 130px;
-    height: 50px;
+    height: 40px;
     border-left: 1px solid black;
     padding-left: 15px;
-    margin-right: 15%;
+    margin-right: 5%;
 }
 
 
@@ -51,12 +48,22 @@ div {
 }
 
 #navFind {
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 2px;
     border: 1px solid white;
-    padding: 5px 15px;
+    padding-left: 400px;
+    padding-right: 25px;
     text-align: left;
     background-color: whitesmoke;
-    width: 15%;
-    margin-right: 30%;
+    width: 30px;
+    margin-right: 10%;
+    
+    input[type="text"] {
+		border-style: hidden;
+		font-size: medium;
+		padding: 15px;
+		box-sizing: border-box;
+		width: 88%;
+		color: gray;
+	}
 }
