--- a/src/Pages/Kimjeongho/Main/Components/MainRight/MainRight.scss
+++ b/src/Pages/Kimjeongho/Main/Components/MainRight/MainRight.scss
@@ -1,90 +1,93 @@
-#main-right {
-    position: relative;
-    top: 35px;
-    display: flex;
-    justify-content: center;
-    margin-right: 800px;
-}
+body {
+    text-align: center;
+    
+    div {
+        text-align: left;
+        display: block;
 
-div {
-    text-align: left;
-    display: block;
-}
+        .box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -100px;
+            margin-left: -100px;
+            width: 200px;
+            height: 200px;
+        }
 
-.story-right {
-    margin-left: 700px;
-}
+        #main-right {
+            position: relative;
+            top: 35px;
+            display: flex;
+            justify-content: center;
+            margin-right: 800px;
+        }
 
-.makeBorder {
-    border: 1px solid white;
-    width: 350px;
-    padding: 20px 10px 10px 0px;
-    margin: 70px 0px 5px 30px;
-    background-color: white;
-}
+        .story-right {
+            margin-left: auto;
+            margin-right: auto;
+        }
 
-.bind {
-    display: flex;
-    justify-content: space-between;
-    padding-right: 5px;
-}
-.wordGray {
-    margin-left: 25px;
-    color: gray;
-}
+        .makeBorder {
+            border: 1px solid white;
+            width: 350px;
+            padding: 20px 10px 10px 0px;
+            margin: 70px 0px 5px 650px;
+            background-color: white;
+        }
 
-.wordBlack {
-    margin-right: 3px;
-}
+        .bind {
+            display: flex;
+            justify-content: space-between;
+            padding-right: 5px;
+        }
 
-.user {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background-color: white;
-    width: 97%;
-}
+        .wordGray {
+            margin-left: 25px;
+            color: gray;
+        }
 
-.circle2 {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin: 10px 15px 7px 20px;
-    position: relative;
-}
+        .wordBlack {
+            margin-right: 3px;
+        }
 
-.bold {
-    font-weight: bold;
-}
+        .user {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            background-color: white;
+            width: 97%;
+        }
 
-.userId {
-    margin-bottom: 0px;
-    display: flex;
-}
+        .circle2 {
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin: 10px 15px 7px 50px;
+            position: relative;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin: 10px 15px 7px 20px;
+            position: relative;
+        }
 
-.follow {
-    font-weight: bold;
-    color: #3c81f0;
-    position: absolute;
-    margin-left: 270px;
-}
+        .bold {
+            font-weight: bold;
+        }
 
-.circle2 {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin: 10px 15px 7px 20px;
-    position: relative;
-}
+        .userId {
+            margin-bottom: 0px;
+            display: flex;
+            margin-bottom: 0px;
+            display: flex;
+        }
 
-.userId {
-    margin-bottom: 0px;
-    display: flex;
-}
-
-.follow {
-    font-weight: bold;
-    color: #3c81f0;
-    position: absolute;
-    margin-left: 270px;
+        .follow {
+            font-weight: bold;
+            color: #3c81f0;
+            position: absolute;
+            margin-left: 270px;
+        }
+    }
 }
