[송수호]React 로그인기능구현 완료

--- a/src/Pages/songsuho/Login/Login.scss
+++ b/src/Pages/songsuho/Login/Login.scss
@@ -86,4 +86,12 @@
     .require {
         margin-top: 100px;
     }
+
+    .activeBtn {
+        background-color: blue;
+    }
+
+    .unactiveBtn {
+        background-color: red;
+    }
 }
